--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -7,19 +7,31 @@
 @import "base";
 
 header{
-    >img{
-        width: 100%;
+    .img{
+        width:100%;
+        overflow: hidden;
         position:absolute;
-        z-index: -1;
+            z-index: -1;
+        img{
+        }
     }
     h1{
-        @include span-columns(6,10);
+        @include span-columns(4,10);
+        position: relative;
         a{
             color:white;
             font-weight: bolder;
             border:none;
             display:inline-block;
             padding:1em;
+        }
+        span{
+            font-size: 0.6em;
+            color: white;
+            text-align: left;
+            position:absolute;
+            left:1.82em;
+            bottom:0;
         }
     }
 }
@@ -34,6 +46,7 @@ header{
     display:block;
     clear:both;
 }
+body{}
 
 html{
     font-family: Verdana, Geneva, sans-serif;
@@ -88,7 +101,7 @@ h1,h2,h3,h4,h5,h6{font-family: "Avant Garde", Avantgarde, "Century Gothic", Cent
 /////////----------------------------------------------------------------------------------
 
 .user{
-    @include span-columns(4 omega,10);
+    @include span-columns(6 omega,10);
     padding-top:1em;
 }
 
@@ -111,20 +124,22 @@ h1,h2,h3,h4,h5,h6{font-family: "Avant Garde", Avantgarde, "Century Gothic", Cent
         @include span-columns(2.5,3);
         box-sizing: border-box;
     }
+    h3:first-child{border:none;}
     h3{
-        background-color: white;
         cursor: default;
         display:inline-block;
-        border-radius: 0.5em;
         margin-bottom: 0.5em;
+        border-left: 0.2em solid #FF7C00;
         a{
             border:none;
-            color:#01938A;
+            color:black;
+            background-color: rgba(255,255,255,0.95);
             padding:0.6em;
-            display:inline-block;   
+            display:inline-block;  
         }
         a:hover{
-            text-decoration: underline;
+            background-color:rgba(1, 147, 154,0.9);
+            color:white;
         }
         
     }
@@ -189,17 +204,17 @@ nav{
             display: inline-block;
             @include box-sizing(border-box);
             width:16.6666667%;
-            background-color: rgba(255,255,255,0.95);
             border-left: 0.2em solid #FF7600;
             a{
                 text-align: center;
                 display: block;
                 padding: 0.8em;
                 border:none;
+                 background-color: rgba(255,255,255,0.95);
                 
             }
             a:hover{
-                background-color: rgba(1, 147, 154,0.6);
+                background-color: rgba(1, 147, 154,0.9);
                 color:white;
             }
         }
@@ -323,7 +338,7 @@ section{
     select:hover{
         cursor:pointer;
     }
-    input{
+    input, textarea{
         @include span-columns(3 omega ,4.5);
         margin-top: 0;
         @include box-sizing(border-box);
@@ -336,11 +351,13 @@ section{
     clear:both;
 }
 
-[type="text"],[type="password"]{
-    background-color: white;
-    border: 1px solid #01938A;
+[type="text"],[type="password"],textarea{
+    -webkit-appearance: none;
+        -moz-appearance: none;
+    background-color: transparent;
+    border: 1px solid white;
     border-radius: 0.5em;
-    color:black;
+    color:white;
     font-size: 1em;
     padding:0.6em;
     margin-bottom: 0.6em;
@@ -399,16 +416,19 @@ input[type="date"]{
         display:inline-block;
         @include box-sizing(border-box);
         padding: 0.6em;
-        background-color: rgba(1, 147, 154,0.3);;
-        margin-bottom: 2.04082%;
         border:none;
+        margin-bottom: 2.04082%;
         transition: background-color, 0.5s;
         h3{
             margin-bottom: 0.8em;
+            background-color: #01939A;
+            padding:0.5em;
+            color: white;
             span{
                 float: right;
                 font-size: 0.8em;
-                color: white;
+                color: #FF7C00;
+                text-shadow: 0 0 1px black;
             }
         }
         @include span-columns(4 omega,10);
@@ -416,12 +436,12 @@ input[type="date"]{
             @include span-columns(2,4);
             max-width: 100%;
             margin-top: 0.3em;
-            border: 0.3em solid white
+            border: 0.3em solid white;
+            box-shadow: 0px 0px 8px rgb(160,160,160);
         }
     }
     a:hover{
         color:black;
-        background-color: rgba(1, 147, 154,0.6);;
-
+        background-color: rgb(245,245,245);
     }
 }
