--- a/public/styles/screen.css
+++ b/public/styles/screen.css
@@ -59,76 +59,86 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block; }
 
 /* line 10, ../sass/screen.scss */
-header > img {
+header .img {
   width: 100%;
+  overflow: hidden;
   position: absolute;
   z-index: -1; }
-/* line 15, ../sass/screen.scss */
+/* line 18, ../sass/screen.scss */
 header h1 {
-  width: 59.18367%;
+  width: 38.77551%;
   float: left;
   margin-right: 2.04082%;
-  display: inline; }
-  /* line 17, ../sass/screen.scss */
+  display: inline;
+  position: relative; }
+  /* line 21, ../sass/screen.scss */
   header h1 a {
     color: white;
     font-weight: bolder;
     border: none;
     display: inline-block;
     padding: 1em; }
+  /* line 28, ../sass/screen.scss */
+  header h1 span {
+    font-size: 0.6em;
+    color: white;
+    text-align: left;
+    position: absolute;
+    left: 1.82em;
+    bottom: 0; }
 
-/* line 27, ../sass/screen.scss */
+/* line 39, ../sass/screen.scss */
 .hidden {
   position: absolute;
   display: none; }
 
-/* line 32, ../sass/screen.scss */
+/* line 44, ../sass/screen.scss */
 .top:after {
   content: "";
   display: block;
   clear: both; }
 
-/* line 38, ../sass/screen.scss */
+/* line 51, ../sass/screen.scss */
 html {
   font-family: Verdana, Geneva, sans-serif;
   line-height: 1.4em; }
-  /* line 41, ../sass/screen.scss */
+  /* line 54, ../sass/screen.scss */
   html a {
     color: black;
     text-decoration: none;
     border-bottom: 1px dotted black; }
-  /* line 46, ../sass/screen.scss */
+  /* line 59, ../sass/screen.scss */
   html a:hover {
     color: #5DC8CD; }
-  /* line 49, ../sass/screen.scss */
+  /* line 62, ../sass/screen.scss */
   html p {
     margin-bottom: 0.8em; }
 
-/* line 54, ../sass/screen.scss */
+/* line 67, ../sass/screen.scss */
 h1 {
   font-size: 2em; }
 
-/* line 55, ../sass/screen.scss */
+/* line 68, ../sass/screen.scss */
 h2 {
   font-size: 1.5em; }
 
-/* line 56, ../sass/screen.scss */
+/* line 69, ../sass/screen.scss */
 h3 {
   font-size: 1.17em; }
 
-/* line 57, ../sass/screen.scss */
+/* line 70, ../sass/screen.scss */
 h4 {
   font-size: 1em; }
 
-/* line 58, ../sass/screen.scss */
+/* line 71, ../sass/screen.scss */
 h5 {
   font-size: 0.83em; }
 
-/* line 59, ../sass/screen.scss */
+/* line 72, ../sass/screen.scss */
 h6 {
   font-size: 0.75em; }
 
-/* line 61, ../sass/screen.scss */
+/* line 74, ../sass/screen.scss */
 .content {
   *zoom: 1;
   max-width: 49em;
@@ -144,23 +154,23 @@ h6 {
     display: table;
     clear: both; }
   @media (min-width: 24em) {
-    /* line 61, ../sass/screen.scss */
+    /* line 74, ../sass/screen.scss */
     .content {
       max-width: 24em; } }
   @media (min-width: 44em) {
-    /* line 61, ../sass/screen.scss */
+    /* line 74, ../sass/screen.scss */
     .content {
       max-width: 44em; } }
   @media (min-width: 55em) {
-    /* line 61, ../sass/screen.scss */
+    /* line 74, ../sass/screen.scss */
     .content {
       max-width: 59em; } }
   @media (min-width: 65em) {
-    /* line 61, ../sass/screen.scss */
+    /* line 74, ../sass/screen.scss */
     .content {
       max-width: 69em; } }
 
-/* line 67, ../sass/screen.scss */
+/* line 80, ../sass/screen.scss */
 [type="submit"] {
   background-color: #FF7600;
   border: none;
@@ -173,70 +183,74 @@ h6 {
   color: white;
   text-shadow: 0 1px 1px black; }
 
-/* line 79, ../sass/screen.scss */
+/* line 92, ../sass/screen.scss */
 [type="submit"]:hover {
   box-shadow: 0 0.5em 0 #01938A; }
 
-/* line 83, ../sass/screen.scss */
+/* line 96, ../sass/screen.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif; }
 
-/* line 90, ../sass/screen.scss */
+/* line 103, ../sass/screen.scss */
 .user {
-  width: 38.77551%;
+  width: 59.18367%;
   float: right;
   margin-right: 0;
   *margin-left: -1em;
   display: inline;
   padding-top: 1em; }
 
-/* line 95, ../sass/screen.scss */
+/* line 108, ../sass/screen.scss */
 [id="flash_notice"] span {
   padding: 0.3em;
   border-radius: 0.3em;
   color: white;
   background-color: #01939A; }
 
-/* line 102, ../sass/screen.scss */
+/* line 115, ../sass/screen.scss */
 .userConnexion {
   text-align: right;
   position: relative;
   box-sizing: border-box;
   color: black; }
-  /* line 107, ../sass/screen.scss */
+  /* line 120, ../sass/screen.scss */
   .userConnexion a {
     color: black; }
-  /* line 110, ../sass/screen.scss */
+  /* line 123, ../sass/screen.scss */
   .userConnexion input {
     width: 85.71429%;
     float: left;
     margin-right: 7.14286%;
     display: inline;
     box-sizing: border-box; }
-  /* line 114, ../sass/screen.scss */
+  /* line 127, ../sass/screen.scss */
+  .userConnexion h3:first-child {
+    border: none; }
+  /* line 128, ../sass/screen.scss */
   .userConnexion h3 {
-    background-color: white;
     cursor: default;
     display: inline-block;
-    border-radius: 0.5em;
-    margin-bottom: 0.5em; }
-    /* line 120, ../sass/screen.scss */
+    margin-bottom: 0.5em;
+    border-left: 0.2em solid #FF7C00; }
+    /* line 133, ../sass/screen.scss */
     .userConnexion h3 a {
       border: none;
-      color: #01938A;
+      color: black;
+      background-color: rgba(255, 255, 255, 0.95);
       padding: 0.6em;
       display: inline-block; }
-    /* line 126, ../sass/screen.scss */
+    /* line 140, ../sass/screen.scss */
     .userConnexion h3 a:hover {
-      text-decoration: underline; }
-  /* line 131, ../sass/screen.scss */
+      background-color: rgba(1, 147, 154, 0.9);
+      color: white; }
+  /* line 146, ../sass/screen.scss */
   .userConnexion h3:hover + form, .userConnexion form:hover {
     opacity: 1;
     height: auto;
     display: block;
     padding-left: 12%;
     box-shadow: 0px 0px 8px; }
-  /* line 139, ../sass/screen.scss */
+  /* line 154, ../sass/screen.scss */
   .userConnexion form {
     background-color: white;
     padding: 0.6em;
@@ -244,7 +258,7 @@ h1, h2, h3, h4, h5, h6 {
     display: none;
     opacity: 0; }
 
-/* line 148, ../sass/screen.scss */
+/* line 163, ../sass/screen.scss */
 [type="text"], [type="password"] {
   background-color: transparent;
   border: 1px solid black;
@@ -253,52 +267,52 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0.6em;
   color: black; }
 
-/* line 157, ../sass/screen.scss */
+/* line 172, ../sass/screen.scss */
 input:focus {
   border: 1px solid #FF7C00; }
 
-/* line 180, ../sass/screen.scss */
+/* line 195, ../sass/screen.scss */
 nav ul {
   color: black;
   width: 100%;
   margin: 1.7em 0; }
-  /* line 185, ../sass/screen.scss */
+  /* line 200, ../sass/screen.scss */
   nav ul li:first-child {
     border: none; }
-  /* line 188, ../sass/screen.scss */
+  /* line 203, ../sass/screen.scss */
   nav ul li {
     display: inline-block;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     width: 16.6666667%;
-    background-color: rgba(255, 255, 255, 0.95);
     border-left: 0.2em solid #FF7600; }
-    /* line 194, ../sass/screen.scss */
+    /* line 208, ../sass/screen.scss */
     nav ul li a {
       text-align: center;
       display: block;
       padding: 0.8em;
-      border: none; }
-    /* line 201, ../sass/screen.scss */
+      border: none;
+      background-color: rgba(255, 255, 255, 0.95); }
+    /* line 216, ../sass/screen.scss */
     nav ul li a:hover {
-      background-color: rgba(1, 147, 154, 0.6);
+      background-color: rgba(1, 147, 154, 0.9);
       color: white; }
 
-/* line 217, ../sass/screen.scss */
+/* line 232, ../sass/screen.scss */
 h2 {
   margin-left: -0.6em;
   border-left: 0.6em solid #FF7600;
   padding: 0.5em 0; }
 
-/* line 224, ../sass/screen.scss */
+/* line 239, ../sass/screen.scss */
 .list h3 {
   background-color: #01939A;
   color: white;
   text-align: center;
   padding: 0.6em;
   margin: 1em 0 0.5em; }
-/* line 231, ../sass/screen.scss */
+/* line 246, ../sass/screen.scss */
 .list ul a {
   border: none;
   padding: 0.6em;
@@ -310,75 +324,75 @@ h2 {
   background-color: black;
   height: 100px;
   transition: background-color 0.5s; }
-  /* line 240, ../sass/screen.scss */
+  /* line 255, ../sass/screen.scss */
   .list ul a h4 {
     text-align: center; }
-/* line 244, ../sass/screen.scss */
+/* line 259, ../sass/screen.scss */
 .list ul a:hover {
   background-color: #FF7600; }
 
-/* line 250, ../sass/screen.scss */
+/* line 265, ../sass/screen.scss */
 .sevenFirst a:first-child {
   width: 38.77551%;
   float: left;
   margin-right: 2.04082%;
   display: inline;
   height: 222px; }
-/* line 255, ../sass/screen.scss */
+/* line 270, ../sass/screen.scss */
 .sevenFirst a {
   width: 18.36735%;
   float: left;
   margin-right: 2.04082%;
   display: inline; }
-  /* line 257, ../sass/screen.scss */
+  /* line 272, ../sass/screen.scss */
   .sevenFirst a:nth-child(3n) {
     float: right;
     margin-right: 0;
     *margin-left: -1em;
     display: inline; }
 
-/* line 263, ../sass/screen.scss */
+/* line 278, ../sass/screen.scss */
 .others a:nth-child(4) {
   width: 38.77551%;
   float: left;
   margin-right: 2.04082%;
   display: inline;
   height: 222px; }
-/* line 268, ../sass/screen.scss */
+/* line 283, ../sass/screen.scss */
 .others a {
   width: 18.36735%;
   float: left;
   margin-right: 2.04082%;
   display: inline; }
-  /* line 270, ../sass/screen.scss */
+  /* line 285, ../sass/screen.scss */
   .others a:nth-child(4n) {
     float: right;
     margin-right: 0;
     *margin-left: -1em;
     display: inline; }
 
-/* line 275, ../sass/screen.scss */
+/* line 290, ../sass/screen.scss */
 .month:after {
   content: "";
   display: block;
   clear: both; }
 
-/* line 281, ../sass/screen.scss */
+/* line 296, ../sass/screen.scss */
 section {
   margin-bottom: 3em; }
 
-/* line 290, ../sass/screen.scss */
+/* line 305, ../sass/screen.scss */
 .find {
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
   padding: 1.5em; }
-  /* line 297, ../sass/screen.scss */
+  /* line 312, ../sass/screen.scss */
   .find h2 {
     border: none;
     margin: 0 0 1em;
     padding: 0 0 0.6em;
     text-align: center; }
-  /* line 303, ../sass/screen.scss */
+  /* line 318, ../sass/screen.scss */
   .find label {
     width: 31.81818%;
     float: left;
@@ -390,7 +404,7 @@ section {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box; }
-  /* line 310, ../sass/screen.scss */
+  /* line 325, ../sass/screen.scss */
   .find select {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -407,11 +421,11 @@ section {
     padding: 0.5em;
     background: url(../img/down_arrow_select.jpg) no-repeat right #dddddd;
     margin-bottom: 0.6em; }
-  /* line 323, ../sass/screen.scss */
+  /* line 338, ../sass/screen.scss */
   .find select:hover {
     cursor: pointer; }
-  /* line 326, ../sass/screen.scss */
-  .find input {
+  /* line 341, ../sass/screen.scss */
+  .find input, .find textarea {
     width: 63.63636%;
     float: right;
     margin-right: 0;
@@ -422,23 +436,25 @@ section {
     -moz-box-sizing: border-box;
     box-sizing: border-box; }
 
-/* line 333, ../sass/screen.scss */
+/* line 348, ../sass/screen.scss */
 .find:after {
   content: "";
   display: block;
   clear: both; }
 
-/* line 339, ../sass/screen.scss */
-[type="text"], [type="password"] {
-  background-color: white;
-  border: 1px solid #01938A;
+/* line 354, ../sass/screen.scss */
+[type="text"], [type="password"], textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: transparent;
+  border: 1px solid white;
   border-radius: 0.5em;
-  color: black;
+  color: white;
   font-size: 1em;
   padding: 0.6em;
   margin-bottom: 0.6em; }
 
-/* line 349, ../sass/screen.scss */
+/* line 366, ../sass/screen.scss */
 input[type="date"] {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -456,14 +472,14 @@ input[type="date"] {
   padding: 0.5em;
   margin-bottom: 0.6em; }
 
-/* line 363, ../sass/screen.scss */
+/* line 380, ../sass/screen.scss */
 .left {
   width: 48.97959%;
   float: left;
   margin-right: 2.04082%;
   display: inline; }
 
-/* line 367, ../sass/screen.scss */
+/* line 384, ../sass/screen.scss */
 .right {
   width: 48.97959%;
   float: right;
@@ -471,24 +487,24 @@ input[type="date"] {
   *margin-left: -1em;
   display: inline; }
 
-/* line 372, ../sass/screen.scss */
+/* line 389, ../sass/screen.scss */
 .login .left {
   margin-left: 25%; }
-  /* line 374, ../sass/screen.scss */
+  /* line 391, ../sass/screen.scss */
   .login .left label {
     padding: 0.55em 0;
     margin-bottom: 0.6em; }
 
-/* line 387, ../sass/screen.scss */
+/* line 404, ../sass/screen.scss */
 .news h2 {
   margin-bottom: 1em; }
-/* line 390, ../sass/screen.scss */
+/* line 407, ../sass/screen.scss */
 .news a:nth-child(2) {
   width: 59.18367%;
   float: left;
   margin-right: 2.04082%;
   display: inline; }
-  /* line 392, ../sass/screen.scss */
+  /* line 409, ../sass/screen.scss */
   .news a:nth-child(2) figure img {
     width: 31.03448%;
     float: left;
@@ -496,31 +512,34 @@ input[type="date"] {
     display: inline;
     max-width: 100%;
     margin-top: 0.3em; }
-/* line 398, ../sass/screen.scss */
+/* line 415, ../sass/screen.scss */
 .news a {
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 0.6em;
-  background-color: rgba(1, 147, 154, 0.3);
-  margin-bottom: 2.04082%;
   border: none;
+  margin-bottom: 2.04082%;
   transition: background-color, 0.5s;
   width: 38.77551%;
   float: right;
   margin-right: 0;
   *margin-left: -1em;
   display: inline; }
-  /* line 406, ../sass/screen.scss */
+  /* line 422, ../sass/screen.scss */
   .news a h3 {
-    margin-bottom: 0.8em; }
-    /* line 408, ../sass/screen.scss */
+    margin-bottom: 0.8em;
+    background-color: #01939A;
+    padding: 0.5em;
+    color: white; }
+    /* line 427, ../sass/screen.scss */
     .news a h3 span {
       float: right;
       font-size: 0.8em;
-      color: white; }
-  /* line 415, ../sass/screen.scss */
+      color: #FF7C00;
+      text-shadow: 0 0 1px black; }
+  /* line 435, ../sass/screen.scss */
   .news a figure img {
     width: 47.36842%;
     float: left;
@@ -528,8 +547,9 @@ input[type="date"] {
     display: inline;
     max-width: 100%;
     margin-top: 0.3em;
-    border: 0.3em solid white; }
-/* line 422, ../sass/screen.scss */
+    border: 0.3em solid white;
+    box-shadow: 0px 0px 8px #a0a0a0; }
+/* line 443, ../sass/screen.scss */
 .news a:hover {
   color: black;
-  background-color: rgba(1, 147, 154, 0.6); }
+  background-color: whitesmoke; }
